--- a/HW3_Elina_13-1/css/style.css
+++ b/HW3_Elina_13-1/css/style.css
@@ -2,8 +2,9 @@
     margin: 0;
     padding: 0;
 }
+
 .homepage {
     background: url("../image/backgroundimg.png") no-repeat center;
-    height: 100vh;..
+    height: 100vh;
     background-size: cover;
 }
